feat: add scripts for generating CDS